# spriterator

./: Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  LICENSE.txt  README.md
.github/workflows/: rust.yml
src/: frame.rs  lib.rs  sprite.rs  spriterator.rs
tests/: integration_tests.rs
