[package]
name = "spriterator"
version = "0.1.0"
edition = "2021"
authors = ["Dmitrii Korchemkin <mail@kda.name>"]
description = "Generates a sprite sheet from images in the specified directory."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/spriterator"
keywords = ["image", "sprite", "graphics", "processing"]
categories = ["graphics", "image-processing"]

[dependencies]
image = "0.25.5"
once_cell = "1.20.2"
rayon = "1.10.0"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.14.0"
