[package]
name = "spriterator"
version = "0.1.0-alpha.3"
edition = "2021"
authors = ["Dmitrii Korchemkin <mail@kda.name>"]
description = "Generates sprite sheets from images in the specified directory."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/crate/spriterator/latest"
repository = "https://github.com/krchmkn/spriterator"
keywords = ["image", "sprite", "graphics", "processing"]
categories = ["graphics", "multimedia"]
readme = "README.md"

[dependencies]
image = "0.25.5"
walkdir = "2.5.0"
